Bug 125160 - No drag n drop copy possible (kde5 vclplug)
Summary: No drag n drop copy possible (kde5 vclplug)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Katarina Behrens (Inactive)
URL:
Whiteboard: target:6.3.0
Keywords: difficultyInteresting
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2019-05-07 15:21 UTC by Kai Zimmermann
Modified: 2019-05-24 15:29 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Zimmermann 2019-05-07 15:21:50 UTC
Description:
Tried with 6.2.4.1 and 6.2.3.2
Drag n drop copy doesn't work in Writer and in Calc
-- [ctrl] + [left mouse button] --
--> Mouse pointer doesn't change -->  No +

6.1.5.2 works fine.

Steps to Reproduce:
1.mark cell
2.[ctrl] + [left mouse button]
3.Mouse pointer doesn't change -->  No +

Actual Results:
move cell

Expected Results:
copy cell


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Comment 1 raal 2019-05-07 16:29:32 UTC
works for me Version: 6.3.0.0.alpha0+
Build ID: 83abdf803a023067ebc207fd82dde987df233754
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win;
Comment 2 Kai Zimmermann 2019-05-08 07:33:49 UTC
Works for me as well
Version: 6.3.0.0.alpha0+   --> OK
Comment 3 Katarina Behrens (Inactive) 2019-05-08 07:43:26 UTC
Confirmed DnD + copy (Ctrl key pressed) doesn't work w/ kde5 vclplug
Comment 4 Commit Notification 2019-05-24 07:43:18 UTC
Katarina Behrens committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c58487251272b390e9c56a880fa4788d0a5b5a7f%5E%21

tdf#125160: honour keyboard modifiers if used during DnD

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.