tdf#125160: honour keyboard modifiers if used during DnD

e.g. copy-DnD with Ctrl held down. This is qt5 remix of tdf#109227

Change-Id: Ib0794c7468cc04d3d50686952305717e10c90c9a